--- a/index.html
+++ b/index.html
@@ -237,11 +237,30 @@
       <h1 class="section-header" style="color:rgb(134, 207, 255)">UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/google-play-services/asset-delivery-pro/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom rose">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Play Asset Delivery Pro</h5>
+              </div>
+              <img src="images/AssetDeliveryPRO/PlayAssetDeliveryPro_Feature_Image.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine plugin comprehensively exposing all Google Play Asset Delivery features for Android Game Developers.
+                </p>
+                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a> -->
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/asset-delivery/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom rose">
               <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
-                <h5 style="margin-bottom: 0;">Play Asset Delivery V2</h5>
+                <h5 style="margin-bottom: 0;">Play Asset Delivery</h5>
               </div>
               <img src="images/AssetDelivery/AssetDelivery_Feature_Image.png" alt="...">
               <div class="card-body card-body-custom">
