--- a/plugins/google-play-services/asset-delivery-pro/overview.html
+++ b/plugins/google-play-services/asset-delivery-pro/overview.html
@@ -121,7 +121,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Play Asset Delivery Proffesional Overview</h1>
+                    <h1 class="h2 text-white-shadow">Play Asset Delivery Professional Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px">
                     <div class="info">
@@ -190,7 +190,7 @@
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
-                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine and is highly recommeded.
+                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine and is highly recommended.
                         </p>
                     </div>
                     
