--- a/plugins/google-play-services/asset-delivery-pro/getting_started.html
+++ b/plugins/google-play-services/asset-delivery-pro/getting_started.html
@@ -325,7 +325,7 @@
                                     </div>
                                     <div class="tab-pane fade" id="content3" role="tabpanel" aria-labelledby="tab3">
                                         <div style="display: flex; justify-content: center; align-items: center;">
-                                            <img src="../../../images/AssetDeliveryPRO/ObbFilters_Insertion.PNG" alt="Image 1" style="max-width: 90%;">
+                                            <img src="../../../images/AssetDeliveryPRO/ObbFilters_Insertion.png" alt="Image 1" style="max-width: 90%;">
                                         </div>
                                     </div>
                                 </div>
