fix: admob plugin no longer stops use of google play game features

--- a/plugins/advertising/admob/overview.html
+++ b/plugins/advertising/admob/overview.html
@@ -154,12 +154,19 @@
                         <p class="content">
                             <span style="font-weight: 500;">Google Play Games Services:</span>
                         </p>
+                        <p class="content" style="font-size: 14px; margin-bottom: 5px;">
+                            <s>Using this plugin, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.</s>
+                        </p>
+                        <p class="content" style="font-size: 14px;">
+                            <s>In the event you make use of these services, I have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
+                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine.</s>
+                        </p>
                         <p class="content">
-                            Using this plugin, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
+                            I have managed to find a compatible library version of the Google Play Games libraries which can work with the latest Admob libraries and the built-in Unreal Engine Google Play Game functionality.
+                            This plugin now updates to the latest version of the library that can support the built-in Google Play Game services as well as be compatible with the Admob Library.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
-                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine.
+                            Please note, as I update this plugin's admob library, this may change as the versions get further and further apart. It is still strongly encouraged that you consider the <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Play Base Services V2</a> plugin which will always be compatible and provide a much more enhanced Google Play Games service integration.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
@@ -172,8 +179,13 @@
                         </p>
                         <p class="content">
                             We have taken special measures to <span style="font-weight: 500">handle all Engine versions from Unreal Engine 4.27 onwards</span> to cater for all the requirements of keeping the Admob library as up to date as possible.
-                            With the latest version of Admob, the outdated UE built in Google Play Services library does not work, so we have also <span style="font-weight: 500">released a plugin which offers the upgraded Google Play Services</span> to allow you to use both in the event that is part of your requirements.
-                            In addition to this, all our available plugins can automatically detect this upgrade and adapt to the latest library as well.
+                            <s style="font-size: 14px;">With the latest version of Admob, the outdated UE built in Google Play Services library may no longer work. We have also <span style="font-weight: 500">released a plugin which offers the upgraded Google Play Services</span> to allow you to use both in the event that is part of your requirements.
+                            In addition to this, all my available plugins can automatically detect this upgrade and adapt to the latest library as well.</s> 
+                        </p>
+                        <p class="content">
+                            As stated previously I have managed to find a compatible google play games library version which allows you to use existing google play game features offered by Unreal Engine.
+                            Once again, <span style="font-weight: 500">Please note</span> that this may not remain like this as the library versions get further and further apart, and I still strongly encourage you to consider using my <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Play Base Services V2</a> plugin.
+                            
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             Here is a summary of all the blueprint nodes the Advanced Admob Ads plugin has to offer.
