--- a/plugins/release/notes/advanced_ads_pro.html
+++ b/plugins/release/notes/advanced_ads_pro.html
@@ -139,6 +139,39 @@
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-08-23</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.8</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Update Play Game Service Libraries</li>
+                                                <li>No longer prevents use of built-in Google Play Game Services</li>
+                                                <li>Now using a compatible Google Play Games library version</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
                                         <div class="news-sub-title">2024-07-03</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
