--- a/plugins/release/notes/play_billing.html
+++ b/plugins/release/notes/play_billing.html
@@ -139,6 +139,38 @@
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-09-03</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.2.2</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Remove Requirement for Google Play Support</li>
+                                                <li>Improved Logging</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
                                         <div class="news-sub-title">2024-08-20</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
