--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                 <p class="card-text">
                   Unreal Engine plugin comprehensively exposing all Google Play Asset Delivery features for Android Game Developers.
                 </p>
-                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/' class="btn btn-custom" target="_blank">
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/849b50aef8fd48d7bb9deb42eca3b575' class="btn btn-custom" target="_blank">
                   <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
-                </a> -->
+                </a>
               </div>
             </div>
           </a>
