--- a/plugins/google-play-services/asset-delivery-pro/getting_started.html
+++ b/plugins/google-play-services/asset-delivery-pro/getting_started.html
@@ -129,7 +129,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="" target="_blank">Official Unreal Engine Marketplace</a> (Disabled untill go-live).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/849b50aef8fd48d7bb9deb42eca3b575" target="_blank">Official Unreal Engine Marketplace</a>
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
