--- a/plugins/google-play-services/asset-delivery-pro/overview.html
+++ b/plugins/google-play-services/asset-delivery-pro/overview.html
@@ -126,7 +126,7 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px">
                     <div class="info">
                         <p class="content">
-                            <b>Google Play Asset Delivery (PAD)</b> - (In Development)
+                            <b>Google Play Asset Delivery (PAD)</b>
                         </p>
                         <p class="content">
                             This plugin is designed to replace the existing Google PAD plugin provided by Unreal Engine and significantly improve it.
