--- a/plugins/release/notes/play_asset_delivery_pro.html
+++ b/plugins/release/notes/play_asset_delivery_pro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>Play Reviews | Release Notes</title>
+    <title>Play Asset Delivery | Release Notes</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -79,7 +79,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="play_asset_delivery_pro.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link active" href="play_asset_delivery_pro.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
                                 Play: Asset Delivery Pro
                             </a>
@@ -109,7 +109,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="play_reviews.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link inactive" href="play_reviews.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews" class="dropdown-item-image">
                                 Play: Reviews
                             </a>
@@ -133,7 +133,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Play Services: In-App Reviews</h1>
+                    <h1 class="h2 text-white-shadow">Play Asset Delivery Pro</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="news-card expanded">
@@ -141,43 +141,11 @@
                             <div class="news-group-item">
                                 <div class="row">
                                     <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png">
-                                    </div>
-                                    <div class="col-9" style="padding-left: 10px">
-                                        <div class="news-title">Stability Release</div>
-                                        <div class="news-sub-title">2024-06-11</div>
-                                    </div>
-                                    <div class="col text-right" style="padding-left: 10px">
-                                        <div class="news-title">v1.0.1</div>
-                                    </div>
-                                </div>
-                            </div>
-                    
-                            <div class="news-info">
-                                <div class="row">
-                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
-                                        <div class="news-info-details" style="font-weight: 500">
-                                            <ul>
-                                                <li>Remove dependency on Play Core Library</li>
-                                                <li>Pull in new Play Reviews Library and Update Code to Adhere to Changes</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="padding: 10px"></div>
-                    <div class="news-card expanded">
-                        <div class="news-container">
-                            <div class="news-group-item">
-                                <div class="row">
-                                    <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png">
+                                        <img class="news-badge" src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
-                                        <div class="news-sub-title">2023-09-28</div>
+                                        <div class="news-sub-title">2024-09-03</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
                                         <div class="news-title">v1.0.0</div>
@@ -189,15 +157,23 @@
                                 <div class="row">
                                     <div class="col-auto">
                                         <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
-                                            src="../../../images/general/InAppReviews_Thumbnail.png">
+                                            src="../../../images/general/PlayAssetDelivery_Thumbnail.png">
                                     </div>
                                     <div class="col-auto" style="display:flex; align-items: center; margin: 0">
                                         <div class="news-info-details" style="font-weight: 500">
                                             <ul>
-                                                <li>Access Google Play Core Service In-App Reviews</li>
-                                                <li>Launch an In-App Review</li>
-                                                <li>Know When Users Have Finished Reviewing Your App</li>
-                                                <li>No Knowledge If User Has Given A Review</li>
+                                                <li>Android 14 Compliant</li>
+                                                <li>Install-Time, Fast-Follow & On-Demand Asset Packs</li>
+                                                <li>Publish Bundles Larger than 200MB</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>No Manual Intervention</li>
+                                                <li>No Double Packaging</li>
+                                                <li>No Manual Asset Pack Gradle File/Directory Creation</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -208,7 +184,7 @@
                 </div>
             </main>
             <div style="margin-bottom: 1000px">
-            </div>
+            </div>    
         </div>
     </div>
 
