--- a/plugins/release/notes/porret_gaming.html
+++ b/plugins/release/notes/porret_gaming.html
@@ -79,6 +79,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="play_asset_delivery_pro.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
+                                Play: Asset Delivery Pro
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="play_asset_delivery.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
                                 Play: Asset Delivery
@@ -138,6 +144,50 @@
                                         <img class="news-badge" src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">New Plugin: Play Asset Delivery Pro</div>
+                                        <div class="news-sub-title">2024-09-03</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto">
+                                        <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
+                                            src="../../../images/general/PlayAssetDeliveryPro_Thumbnail.png">
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Android 14 Compliant</li>
+                                                <li>Install-Time, Fast-Follow & On-Demand Asset Packs</li>
+                                                <li>Publish Bundles Larger than 200MB</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>No Manual Intervention</li>
+                                                <li>No Double Packaging</li>
+                                                <li>No Manual Asset Pack Gradle File/Directory Creation</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="btn-learn-more" href="../../../plugins/google-play-services/asset-delivery-pro/overview.html">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 5px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">New Plugin: Play Asset Delivery</div>
                                         <div class="news-sub-title">2024-08-05</div>
                                     </div>
@@ -169,7 +219,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="btn-learn-more" href="../../../plugins/android-native/utility-pack/overview.html">Learn more</a>
+                                <a class="btn-learn-more" href="../../../plugins/google-play-services/asset-delivery/overview.html">Learn more</a>
                             </div>
                         </div>
                     </div>
