--- a/plugins/release/notes/billing_library_update.html
+++ b/plugins/release/notes/billing_library_update.html
@@ -79,6 +79,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="play_asset_delivery_pro.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
+                                Play: Asset Delivery Pro
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="play_asset_delivery.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
                                 Play: Asset Delivery
