fix a case sensitive image reference issue

--- a/plugins/google-play-services/asset-delivery-pro/chunking.html
+++ b/plugins/google-play-services/asset-delivery-pro/chunking.html
@@ -302,7 +302,7 @@
                         </p>
                         <div class="container" style="margin-left: 0px; padding-left: 0px;">
                             <div style="display: flex; justify-content: center; align-items: center;">
-                                <img style="max-width: 80%" src="../../../images/AssetDeliveryPRO/Example_Google_Play_Console_DeliveryTypes.PNG">
+                                <img style="max-width: 80%" src="../../../images/AssetDeliveryPRO/Example_Google_Play_Console_DeliveryTypes.png">
                             </div>
                         </div>
                     </div>
