--- a/index.html
+++ b/index.html
@@ -237,6 +237,25 @@
       <h1 class="section-header" style="color:rgb(134, 207, 255)">UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/general/login-rewards/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom aquamarine">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Login Rewards</h5>
+              </div>
+              <img src="images/LoginRewards/LoginRewards_Feature_Image.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine plugin designed to track login statistics enabling developers to implement daily, weekly and monthly rewards.
+                </p>
+                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a> -->
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/asset-delivery-pro/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom rose">
               <img class="new-tag" alt='New!' src='images/NewTag.png' />
@@ -258,7 +277,6 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/asset-delivery/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom rose">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Asset Delivery</h5>
               </div>
@@ -277,7 +295,6 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/utility-pack/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom lavender">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Android Utility Pack</h5>
               </div>
