--- a/plugins/general/login-rewards/overview.html
+++ b/plugins/general/login-rewards/overview.html
@@ -56,7 +56,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="Initialization.html">
+                            <a class="nav-link inactive" href="initialization.html">
                                 Initialization
                             </a>
                         </li>
