fix: improve Saved Games Getting Started page

--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -157,6 +157,27 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
+                                Set up Play Games Services
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Follow Google's documentation to make sure you have setup Play Games Services.
+                                A Guide on how to do so can be found <a href="https://developer.android.com/games/pgs/console/setup" target="_blank">here</a>.
+                            </p>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                <span style="font-weight: 500">NOTE:</span> When the documentation speaks about using your SHA1 fingerprint for your Android credential, make sure you use the one generated for you in the Google Play Console.
+                                You can find the correct one by navigating into your application within the Google Play Console and in the left navigation menu, go to "Test and Release" / "Setup" / "App Signing".
+                            </p>
+                            <p class="content" style="padding-left: 10px">
+                                <span style="font-weight: 500">Make sure to use the "App Signing Key Certificate" SHA-1 fingerprint</span>
+                            </p>
+                            <li class="list-group-item">
+                                Enable Saved Games
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In the Google Play Console, select your applicaiton and then in the left navigation menu, navigate to "Grow users" / "Play Games Services" / "Setup and management" / "Configuration".
+                                Select "Edit properties" and turn the Saved Games option to <span style="font-weight: 500">ON</span>.
+                            </p>
+                            <li class="list-group-item">
                                 Add Snapshot Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
