fix: improve play base v2 docs

--- a/plugins/google-play-services/base-services/getting_started.html
+++ b/plugins/google-play-services/base-services/getting_started.html
@@ -182,6 +182,20 @@
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 This toggle allows this plugin as well as our other plugins (Saved Games and Events) to detect the upgrade and adapt appropriately.
                             </p>
+                            <li class="list-group-item">
+                                Set up Play Games Services
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Follow Google's documentation to make sure you have setup Play Games Services.
+                                A Guide on how to do so can be found <a href="https://developer.android.com/games/pgs/console/setup" target="_blank">here</a>.
+                            </p>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                <span style="font-weight: 500">NOTE:</span> When the documentation speaks about using your SHA1 fingerprint for your Android credential, make sure you use the one generated for you in the Google Play Console.
+                                You can find the correct one by navigating into your application within the Google Play Console and in the left navigation menu, go to "Test and Release" / "Setup" / "App Signing".
+                            </p>
+                            <p class="content" style="padding-left: 10px">
+                                <span style="font-weight: 500">Make sure to use the "App Signing Key Certificate" SHA-1 fingerprint</span>
+                            </p>
                         </ol>
                     </div>
                 </div>
