--- a/plugins/google-play-services/base-services/google_sign_in.html
+++ b/plugins/google-play-services/base-services/google_sign_in.html
@@ -162,6 +162,9 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
+                            <span style="font-weight: 500">NOTE:</span> If you do not require a server side access token/server auth code, then you do not need to follow this section.
+                        </p>
+                        <p class="content">
                             In order to gain a server side api access token, you need to have set up your OAuth 2.0 web application client ID.
                             This client ID will be different from your app's client ID.
                         </p>
